--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -401,8 +401,8 @@
                 </div>
               </div>
               <div class="d-flex w-100 flex-wrap justify-content-center mt-5 mb-4">
-                <button  routerLink="/owl-story"
-                  class="btn btn-primary bg-gradient rounded-4 fs-15 ">More Info</button>
+                <a  href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank"
+                  class="btn btn-primary bg-gradient rounded-4 fs-15 ">More Info</a>
               </div>
 
 
