--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header container-fluid" id="myHeader">
-  <div class="col-lg-6 pl-md-0 d-flex flex-wrap align-items-center justify-content-lg-between">
+  <div class="col-xl-3 col-lg-2 pl-md-0 d-flex flex-wrap align-items-center justify-content-lg-between">
     <div class="mobile-nav mr-3">
       <div id="mobilemenu">
         <div id="mySidenav" class="sidenav">
@@ -85,21 +85,60 @@
               <!--              </ul>-->
               <!--            </div>-->
 
-              <div class="d-flex align-items-center text-center mt-5" style="gap: 1em">
-                <a class="btn btn-primary wallet h-50 text-white text-capitalize" href="https://forms.gle/tttE2vRWUN2H9rLH9"
-                  target="_blank">
+              <div class="d-flex  flex-wrap align-items-center text-center mt-5" style="gap: 1em">
+                <!-- <a class="btn btn-primary wallet h-50 text-white text-capitalize"
+                  href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank">
                   Apply Launch Pad
-                </a>
+                </a> -->
+
+                <button class="btn btn-primary bg-gradient d-flex align-items-center mx-2 fs-13 w-100">
+                  <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank"
+                    class=" text-white text-decoration-none d-flex">
+                    Apply Launch Pad
+
+                  </a>
+                </button>
+                <div class="d-flex w-100 flex-wrap justify-content-center">
+                  <!-- <button *ngFor="let egg of claimButtons"
+                    class="btn btn-primary bg-gradient d-flex align-items-center justify-content-center m-2 fs-13"
+                    (click)="openEggClaimModal(egg)">
+                    <span class=" text-white text-decoration-none d-flex "> <span
+                        class="d-flex align-items-center">Claim
+                        _ _ _ Egg <img class="img-responsive pb-2" alt="NFTs" [src]="egg.imgPath" width="35px" /></span>
+                    </span>
+                  </button> -->
+                  <button mat-button [matMenuTriggerFor]="mobMenu"
+                    class="btn-primary bg-{{selectedClaimEgg.bg}} d-flex align-items-center fs-13">
+                    <span class=" text-white text-decoration-none d-flex justify-content-between">
+                      <span class="d-flex align-items-center justify-content-between w-100">Claim_ _ _ Egg
+                        <img class="img-responsive pb-2" alt="NFTs" [src]="selectedClaimEgg.imgPath" width="30" />
+                      </span>
+                    </span>
+
+                  </button>
+                  <mat-menu #mobMenu="matMenu">
+                    <button mat-menu-item *ngFor="let egg of claimButtons" class="bg-{{egg.bg}} py-0"
+                      (click)="selectedClaimEgg=egg;openEggClaimModal(egg)"> <span
+                        class=" text-white text-decoration-none d-flex justify-content-between">
+                        <span class="d-flex align-items-center justify-content-between w-100">Claim_ _ _ Egg<img
+                            class="img-responsive pb-2" alt="NFTs" [src]="egg.imgPath" width="30" /></span>
+                      </span>
+                    </button>
+                  </mat-menu>
+
+
+                </div>
               </div>
 
+
+
+
               <div _ngcontent-xlj-c232="" class="soical_icon d-flex w-100 justify-content-center">
-                <ul _ngcontent-xlj-c232="">
+                <ul _ngcontent-xlj-c232="" class="d-flex w-100 justify-content-center">
                   <li _ngcontent-xlj-c232=""><a _ngcontent-xlj-c232="" href="https://twitter.com/Beyondowl"
-                      target="_blank"><img _ngcontent-xlj-c232="" src="assets/twitter_vector.png"
-                        class="img-responsive"></a></li>
+                      target="_blank"><img _ngcontent-xlj-c232="" src="assets/twitter_vector.png"></a></li>
                   <li _ngcontent-xlj-c232=""><a _ngcontent-xlj-c232="" href="https://discord.com/invite/FDe2E2XsCJ"
-                      target="_blank"><img _ngcontent-xlj-c232="" src="assets/discord-logo.png"
-                        class="img-responsive"></a></li>
+                      target="_blank"><img _ngcontent-xlj-c232="" src="assets/discord-logo.png"></a></li>
                 </ul>
               </div>
               <!-- <button
@@ -182,7 +221,13 @@
               <i class="fas fa-sign-out-alt logout" aria-hidden="true"></i>
             </span>
           </button> -->
+
           </div>
+
+
+
+
+
           <div>
             <a routerLinkActive="active" routerLink="/home" queryParamsHandling="merge" onclick="closeNav()">
               <img class="sidebar-icon" src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/home.png"
@@ -461,6 +506,34 @@
     <p class="text-white text-nowrap pt-2">First blue chip nft on APTos</p>
   </div>
 
+  <div class="col-xl-5 col-lg-4">
+    <div class="d-lg-flex d-none flex-wrap align-items-center justify-content-xl-center justify-content-lg-center">
+      <!-- <button *ngFor="let egg of claimButtons" class="btn btn-primary bg-gradient d-flex align-items-center fs-13"
+        (click)="openEggClaimModal(egg)">
+        <span class=" text-white text-decoration-none d-flex"> <span class="d-flex align-items-center">Claim_ _ _ Egg<img class="img-responsive pb-2" alt="NFTs" [src]="egg.imgPath" width="30" /></span>
+        </span>
+      </button> -->
+      <button mat-button [matMenuTriggerFor]="menu"
+        class="btn-primary bg-{{selectedClaimEgg.bg}} d-flex align-items-center fs-13">
+        <span class=" text-white text-decoration-none d-flex justify-content-between">
+          <span class="d-flex align-items-center justify-content-between w-100">Claim_ _ _ Egg
+            <img class="img-responsive pb-2" alt="NFTs" [src]="selectedClaimEgg.imgPath" width="30" />
+          </span>
+        </span>
+
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let egg of claimButtons" class="bg-{{egg.bg}} py-0"
+          (click)="selectedClaimEgg=egg;openEggClaimModal(egg)"> <span
+            class=" text-white text-decoration-none d-flex justify-content-between">
+            <span class="d-flex align-items-center justify-content-between w-100">Claim_ _ _ Egg<img
+                class="img-responsive pb-2" alt="NFTs" [src]="egg.imgPath" width="30" /></span>
+          </span>
+        </button>
+      </mat-menu>
+    </div>
+  </div>
+
   <!-- <div class="col-lg-2 d-lg-block d-none mr-0">
     <div class="header-center-container">
       <div class="col-12 px-0">
@@ -527,7 +600,7 @@
     </a> &ndash;&gt;
   </div>-->
 
-  <div class="col-lg-6 d-lg-flex d-none align-items-center justify-content-end forlogin-nami">
+  <div class="col-xl-4 col-lg-6 d-lg-flex d-none align-items-center justify-content-end forlogin-nami">
 
 
 
@@ -649,15 +722,18 @@
     </a> -->
 
     <button class="btn btn-primary bg-gradient d-flex align-items-center mx-2">
-      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-13 text-white text-decoration-none">Apply Launch Pad</a>
+      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-13 text-white text-decoration-none">Apply
+        Launch Pad</a>
     </button>
 
     <div *ngIf="state$ | async; else elseBlock">
-      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-13 mx-2">{{truncAddress(state$ | async)}}</button>
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-13 mx-2"
+        (click)="disconnectWallet()">{{truncAddress(state$ |
+        async)}}</button>
     </div>
 
     <ng-template #elseBlock>
-      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2" (click)="openWalletDialog()">
+      <button class="btn btn-primary bg-gradient d-flex align-items-center mx-2" (click)="openWalletDialog()">
         <div class="px-2">
           <svg height="20" width="20" fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 60 60">
@@ -681,10 +757,10 @@
 
     <div class="soical_icon">
       <ul class="d-flex my-auto list-style-none">
-        <li class="mx-2"><a href="https://twitter.com/Beyondowl" target="_blank" ><img src="assets/twitter_vector.png"
+        <li class="mx-2"><a href="https://twitter.com/Beyondowl" target="_blank"><img src="assets/twitter_vector.png"
               class="img-responsive" /></a></li>
-        <li class="mx-2"><a href="https://discord.com/invite/FDe2E2XsCJ" target="_blank"><img src="assets/discord-logo.png"
-              class="img-responsive" /></a></li>
+        <li class="mx-2"><a href="https://discord.com/invite/FDe2E2XsCJ" target="_blank"><img
+              src="assets/discord-logo.png" class="img-responsive" /></a></li>
         <!--        <li><a href="https://t.me/beyondowl" target="_blank"><img src="assets/telegram.png" class="img-responsive"/></a></li>-->
         <!--        <li><a href="https://www.instagram.com/beyondowls/" target="_blank"><img src="assets/instagram.png" class="img-responsive"/></a></li>-->
       </ul>
@@ -793,7 +869,7 @@
   </div>
 
   <!-- First blue chip nft on APTos removed -->
- 
+
   <div class="align-items-center justify-content-start md-aptos-wallet d-none d-lg-none d-md-none"
     style="flex:1; margin-left: 5%; gap: 1em">
     <div style="width: 3.5rem; height: 3.5rem">
