--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,20 +7,26 @@
 .btn:focus {
   outline: none !important;
 }
+
 .soical_icon ul li {
-  list-style: none!important;
+  list-style: none !important;
 }
 
-.soical_icon ul {padding: 0;}
+.soical_icon ul {
+  padding: 0;
+}
+
 .soical_icon ul li a img {
   width: 30px;
 }
+
 .truncate {
   width: 110%;
   white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
+
 .header {
   overflow: hidden;
   // background-color: #f1f1f1;
@@ -39,17 +45,19 @@
   @media (max-width: 991px) {
     height: 50px;
   }
-  
+
   @media (min-width: 992px) {
     height: 75px;
   }
 }
+
 .truncate {
   width: 100%;
   white-space: nowrap !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
+
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -119,19 +127,23 @@
   height: 100%;
   // text-align: center;
   font-size: 16px;
+
   @media (min-width: 992px) and (max-width: 1228px) {
     font-size: 10px !important;
   }
+
   p {
     span {
       margin-left: 4px;
     }
   }
 }
+
 .top_coins {
   display: flex;
   flex-direction: column;
   text-align: center;
+
   p {
     color: white;
     font-size: 16px;
@@ -143,6 +155,7 @@
   border-bottom: 2px solid grey;
   width: 90%;
 }
+
 .icon_setting {
   padding: 5px 4px;
   display: inline-flex;
@@ -151,6 +164,7 @@
   border-radius: 28px;
   max-width: fit-content;
   margin: 0 auto;
+
   // @media (min-width: 992px) and (max-width: 1228px) {
   //   width: 26px;
   //   height: 26px;
@@ -163,6 +177,7 @@
     }
   }
 }
+
 .logo_video {
   max-width: 175px;
 
@@ -172,28 +187,32 @@
 }
 
 img.logo2 {
-   @media (max-width: 991px) {
+  @media (max-width: 991px) {
     max-width: 127px;
   }
+
   @media (max-width: 365px) {
     max-width: 111px;
   }
+
   max-width: 273px;
   padding-top: 4px;
 }
 
-.moon-text{
+.moon-text {
   position: absolute;
   margin-left: 287px;
   color: #f8f9fa;
   font-size: 17px;
 }
+
 .coins_price {
   color: white;
   // @media (min-width: 992px) and (max-width: 1228px) {
   //   font-size: 10px;
   // }
 }
+
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -282,6 +301,7 @@ img.logo2 {
 .sidebar-dropdown-menu {
   display: none;
   visibility: hidden;
+
   @media screen and (max-width: 991px) {
     padding-left: 55px;
   }
@@ -298,6 +318,7 @@ img.logo2 {
     display: block;
     visibility: visible;
   }
+
   .ai-drop-item {
     text-align: center;
     display: block;
@@ -350,6 +371,7 @@ img.logo2 {
     text-align: center;
     float: none;
   }
+
   .child-components-container {
     margin: 0%;
     padding: 0%;
@@ -464,6 +486,7 @@ img.logo2 {
   font-size: 20px;
   color: white;
   background-color: #f4772e !important;
+
   &:hover {
     span {
       color: white;
@@ -479,9 +502,11 @@ img.logo2 {
   align-items: center;
   // width: 40%;
 }
+
 .hello {
   width: 235px;
 }
+
 .without-accno {
   //width: 260px;
   border-radius: 18px;
@@ -582,16 +607,19 @@ img.logo2 {
   .coins_price {
     font-size: 10px;
   }
+
   #mySidenav {
     a {
       display: flex;
       align-items: center;
       padding: 16px !important;
       font-size: 20px;
+
       br {
         display: none;
       }
     }
+
     .app-item-text {
       margin: 0 auto;
       width: 100%;
@@ -602,6 +630,7 @@ img.logo2 {
   .moile_social_links {
     justify-content: space-between;
     margin-bottom: 12px !important;
+
     a {
       border-radius: 50px;
       background-color: #8c52ff;
@@ -661,6 +690,7 @@ mat-button:hover {
   min-height: 1px;
   background-image: linear-gradient(135deg, #ffffff, #ffffff) !important;
   min-height: 1px !important;
+
   @media (max-width: 767px) {
     max-width: 100%;
   }
@@ -676,6 +706,7 @@ mat-button:hover {
   .sidebar-icon {
     margin-bottom: 0;
   }
+
   // .app-item-text {
   //   line-height: 10px;
   //   padding-bottom: 7px;
@@ -687,6 +718,7 @@ mat-button:hover {
     font-size: 14px;
   }
 }
+
 @media (max-width: 575.98px) {
   .moile_social_links {
     a {
@@ -704,11 +736,13 @@ mat-button:hover {
   background: #0096a1 !important;
   background-color: #0096a1 !important;
   border-color: #0096a1 !important;
+
   &:hover {
     background-color: #0096a1 !important;
     color: #ffffff !important;
   }
 }
+
 // .social-icons {
 //   width: 54px;
 //   height: 54px;
@@ -748,6 +782,7 @@ mat-button:hover {
   display: flex;
   background-position: center;
 }
+
 #mySidenav {
   .moile_social_links {
     a {
@@ -760,9 +795,11 @@ mat-button:hover {
 ::ng-deep body.modal-open {
   overflow: initial !important;
 }
+
 ::ng-deep .mat-button-wrapper {
   display: flex;
 }
+
 .header {
   .login-icon {
     width: 30px;
@@ -774,15 +811,19 @@ mat-button:hover {
     background: #0096a1 !important;
     border: none;
     color: #fff;
+
     &:hover {
       background: #0096a1 !important;
     }
   }
 }
+
 ::ng-deep .header .login-icon:hover .fa-sign-in-alt path {
   fill: #000;
 }
+
 .forlogin-nami {
+
   // @media (min-width: 992px) and (max-width: 1300px) {
   //   flex-direction: column;
   // }
@@ -805,8 +846,9 @@ mat-button:hover {
   align-items: center;
   display: flex !important;
   text-align: center;
+
   @media (max-width: 991px) {
-    display: none !important ;
+    display: none !important;
   }
 }
 
@@ -816,10 +858,11 @@ mat-button:hover {
   margin-left: 5px;
   justify-content: flex-end;
 }
+
 #mobilemenu {
   display: none;
-  @media screen and (max-width: 992px) {
-  }
+
+  @media screen and (max-width: 992px) {}
 }
 
 .child-components-container {
@@ -849,12 +892,15 @@ mat-button:hover {
     background-position: center right 15px;
   }
 }
+
 @media screen and (max-width: 991px) {
+
   // .sidebar-dropdown-menu {
   //   padding-left: 64px;
   // }
   .sidebar-dropdown:hover .ai-drop-item {
     justify-content: center;
+
     .app-item-text {
       width: auto !important;
       margin: 0px 5px !important;
@@ -867,11 +913,13 @@ mat-button:hover {
     color: #000000;
     padding: 13px 19px;
     position: relative;
+
     img {
       width: 36px;
       height: 36px;
       margin-right: 16px;
     }
+
     &.disable {
       background-color: rgba(0, 0, 0, 0.4);
       cursor: not-allowed;
@@ -881,10 +929,12 @@ mat-button:hover {
 
 .general-btn-resp {
   font-size: 18px !important;
+
   @media screen and (min-width: 992px) and (max-width: 1300px) {
     height: 40px;
 
     margin: 5px 0px;
+
     .cardino-icon {
       img {
         max-width: 70%;
@@ -896,6 +946,7 @@ mat-button:hover {
 ::ng-deep .mat-tooltip {
   font-size: 10px;
 }
+
 ::ng-deep .tooltip-custum {
   opacity: 1;
   min-width: 160px;
@@ -906,4 +957,26 @@ mat-button:hover {
 
 ::ng-deep .cdk-overlay-pane {
   margin-right: 0px !important;
+}
+
+.bg-orange {
+  background-color: #ff5527;
+  border-color: #ff5527;
+}
+
+::ng-deep.swal2-popup {
+  border: 1px solid #6610f2 !important;
+}
+
+.egg-claim-box {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 }
