--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -1,85 +1,86 @@
 <div class="container-fluid bg-color">
-
-    <div class="row content">
-
-        <div class="d-flex w-100 flex-wrap bg-nft-box">
-            <div class="col-xl-8 mx-auto d-flex align-items-center">
-                <div class="d-flex flex-wrap justify-contnet-center w-100">
-                    <div class="col-lg-6 col-md-12 text-left">
-                        <h1 class="fs-30 fw-900">Beyond Owls</h1>
-                        <div class="card mb-3 px-3 bg-dark-gray rounded" *ngFor="let item of launches">
-                            <div class="card-body">
-                                <h3 class="text-white mb-1 text-center">{{item.name}}:</h3>
-                                <app-count-down [mintDate]="item.launchDate"></app-count-down>
-                            </div>
-                        </div>
-                        <div class="d-flex w-100 justify-content-center">
-                            <button class="btn btn-primary bg-gradient fs-15 w-25">Mint</button>
-                        </div>
-
-                        <p class="my-3 text-center">Max mint: 3 per wallet</p>
-
-                        <p class="text-white text-center fs-15">Minted (0/3000)</p>
-
-                        <div class="line-splitter"></div>
-
-                        <p class="fs-25 lh-3">Beyond owl NFTs will give you access to all programs that get released on
-                            the owl platform.</p>
-                        <div class="d-flex w-100 justify-content-start mb-2">
-                            <button class="btn btn-primary bg-gradient fs-15 w-25 m-2">Mint</button>
-                            <a href="https://www.topaz.so/" class="btn btn-primary bg-gradient fs-15 m-2">View Collection</a>
-                        </div>
-
-                        <div class="d-flex justify-content-start">
-                            <div class="bg-secondary rounded fs-16 p-3 m-2">
-                                <i class='fas fa-globe'></i>
-                            </div>
-                            <div class="bg-secondary rounded fs-16 p-3 m-2">
-                                <a href="https://twitter.com/Beyondowl" class="text-decoration-none text-white"
-                                    target="_blank"><i class='fab fa-twitter'></i></a>
-                            </div>
-                            <div class="bg-secondary rounded fs-16 p-3 m-2">
-                                <a href="https://discord.com/invite/FDe2E2XsCJ" class="text-decoration-none text-white"
-                                    target="_blank"> <i class='fab fa-discord'></i></a>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-lg-6 col-md-12 d-flex align-items-center">
-                        <div class="nft-img bg-secondary shadow  mx-auto">
-                            <img src="assets/2843.png" class="w-100 h-100" />
-                        </div>
-                    </div>
-                </div>
+  <div class="row content">
+    <div class="d-flex w-100 flex-wrap bg-nft-box">
+      <div class="col-xl-8 mx-auto d-flex align-items-center">
+        <div class="d-flex flex-wrap justify-contnet-center w-100">
+          <div class="col-lg-6 col-md-12 text-left">
+            <h1 class="fs-30 fw-900">Beyond Owls</h1>
+            <div class="card mb-3 px-3 bg-dark-gray rounded" *ngFor="let item of launches">
+              <div class="card-body">
+                <h3 class="text-white mb-1 text-center">{{item.name}}:</h3>
+                <app-count-down [mintDate]="item.launchDate"></app-count-down>
+              </div>
             </div>
 
+            <div class="d-flex w-100 justify-content-center">
+              <button class="btn btn-primary bg-gradient fs-15 w-25" (click)="mintNFT()">
+                Mint
+              </button>
+            </div>
+
+            <p class="my-3 text-center">Max mint: 3 per wallet</p>
+
+            <p class="text-white text-center fs-15">Minted ({{minted}}/3000)</p>
+
+            <div class="line-splitter"></div>
+
+            <p class="fs-25 lh-3">
+              Beyond owl NFTs will give you access to all programs that get
+              released on the owl platform.
+            </p>
+            <div class="d-flex w-100 justify-content-center">
+              <button class="btn btn-primary bg-gradient fs-15 w-25">
+                Mint
+              </button>
+            </div>
+
+            <div class="d-flex justify-content-start">
+              <div class="bg-secondary rounded fs-16 p-3 m-2">
+                <i class="fas fa-globe"></i>
+              </div>
+              <div class="bg-secondary rounded fs-16 p-3 m-2">
+                <a href="https://twitter.com/Beyondowl" class="text-decoration-none text-white" target="_blank"><i
+                    class="fab fa-twitter"></i></a>
+              </div>
+              <div class="bg-secondary rounded fs-16 p-3 m-2">
+                <a href="https://discord.com/invite/FDe2E2XsCJ" class="text-decoration-none text-white" target="_blank">
+                  <i class="fab fa-discord"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 d-flex align-items-center">
+            <div class="nft-img bg-secondary shadow mx-auto">
+              <img id="imageFrame" src="assets/nft.gif" class="w-100 h-100" />
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
 
+    <div class="col-lg-12" id="Overview">
+      <div class="scrollable-title-container">
+        <label class="scrollable-title mb-5">NFT Collections</label>
+      </div>
+      <div class="heading">
+        <div class="line-splitter"></div>
+        <h1 class="heading-text">Beyond Moon Collection</h1>
+        <div class="line-splitter"></div>
+      </div>
 
-        <div class="col-lg-12" id="Overview">
-            <div class="scrollable-title-container">
-                <label class="scrollable-title mb-5">NFT Collections</label>
-            </div>
-            <div class="heading">
-                <div class="line-splitter"></div>
-                <h1 class="heading-text">Beyond Owl Collection</h1>
-                <div class="line-splitter"></div>
-            </div>
-
-            <div class="d-flex flex-wrap w-100 justify-content-start">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
-                    <div class="tab flex-column align-items-center position-relative">
-                        <h3 class="text-uppercase title-tripy"> Beyond Owl</h3>
-                        <button class="sync-icon" mat-raised-button (click)="syncNamiWallet()"
-                            matTooltip="Sync assets with blockchain" matTooltipClass="tooltip-custum">
-                            <i class="fas fa-redo-alt"></i>
-                        </button>
-                        <div
-                            class="d-flex justify-content-between w-100 flex-column flex-md-row flex-lg-column flex-xl-row align-items-center">
-                            <!-- <a href="/#/trippy-owl-listing" class="btn btn-secondary tab-button border-0">
+      <div class="d-flex flex-wrap w-100 justify-content-start">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
+          <div class="tab flex-column align-items-center position-relative">
+            <h3 class="text-uppercase title-tripy">Beyond Owl</h3>
+            <button class="sync-icon" mat-raised-button (click)="syncNamiWallet()"
+              matTooltip="Sync assets with blockchain" matTooltipClass="tooltip-custum">
+              <i class="fas fa-redo-alt"></i>
+            </button>
+            <div
+              class="d-flex justify-content-between w-100 flex-column flex-md-row flex-lg-column flex-xl-row align-items-center">
+              <!-- <a href="/#/trippy-owl-listing" class="btn btn-secondary tab-button border-0">
                                 View all
                             </a> -->
-                            <!-- <a
+              <!-- <a
                         href="javascript:void(0)"
                         class="btn btn-primary tab-button border-0 tealcolor"
                         data-toggle="modal"
@@ -92,45 +93,40 @@
                           </div>
                         </a> -->
 
+              <div class="btn btn-primary tab-button border-0 tealcolor" *ngIf="buttondisnft">
+                Loading...
+                <div class="spinner-border spinner-border-sm" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
+              </div>
 
-                            <div class="btn btn-primary tab-button border-0 tealcolor" *ngIf="buttondisnft">Loading...
-                                <div class="spinner-border spinner-border-sm" role="status">
-                                    <span class="sr-only">Loading...</span>
-                                </div>
-                            </div>
-
-                            <!-- <a
+              <!-- <a
                         href="javascript:void(0)"
                         class="btn btn-primary tab-button border-0 tealcolor"
                         (click)="syncNamiWallet()"
                          >
                         Sync
                         </a> -->
+            </div>
+            <div class="trippy-box">
+              <img class="img-responsive nft-img" alt="NFTs" src="assets/dekala-owl/1.png" loading="lazy" />
+            </div>
+          </div>
+        </div>
 
-                        </div>
-                        <div class="trippy-box">
-                            <img class="img-responsive nft-img" alt="NFTs" src="assets/dekala-owl/1.png"
-                                loading="lazy" />
-                        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
+          <div class="tab">
+            <a href="/#/moonverse">
+              <h3 class="text-uppercase clr-white">egg</h3>
 
+              <div class="trippy-box">
+                <img class="img-responsive nft-img" alt="NFTs" src="assets/dragon_egg_4.gif" />
+              </div>
+            </a>
+          </div>
+        </div>
 
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
-                    <div class="tab">
-                        <a href="/#/moonverse">
-                            <h3 class="text-uppercase clr-white">egg</h3>
-
-                            <div class="trippy-box">
-                                <img class="img-responsive nft-img" alt="NFTs" src="assets/dragon_egg_4.gif" />
-                            </div>
-
-                        </a>
-                    </div>
-                </div>
-
-                <!--<div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+        <!--<div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <div class="tab flex-column align-items-center">
                             <a href="javascript:void(0)" >
                             <h3 class="text-uppercase clr-white">Mythic</h3>
@@ -145,62 +141,47 @@
                         </a>
                         </div>
                 </div>-->
+      </div>
+
+      <div class="heading">
+        <div class="line-splitter"></div>
+        <h1 class="heading-text">NFT Launch Pad</h1>
+        <div class="line-splitter"></div>
+      </div>
+
+      <div class="row mt-5 mb-5">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div class="tab flex-column align-items-center">
+            <h3 class="text-uppercase">List Your NFT collections</h3>
+            <div class="position-relative">
+              <a href="javascript:void(0)" class="plus-icon">
+                <i class="fa fa-plus-circle"></i>
+              </a>
+              <img class="img-responsive nft-img" alt="NFTs" src="assets/cross.png" />
             </div>
-
-            <div class="heading">
-                <div class="line-splitter"></div>
-                <h1 class="heading-text">NFT Launch Pad</h1>
-                <div class="line-splitter"></div>
-            </div>
-
-            <div class="row mt-5 mb-5">
-                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="tab flex-column align-items-center">
-                        <h3 class="text-uppercase">List Your NFT collections</h3>
-                        <div class="position-relative">
-                            <a href="javascript:void(0)" class="plus-icon">
-                                <i class="fa fa-plus-circle"></i>
-                            </a>
-                            <img class="img-responsive nft-img" alt="NFTs" src="assets/cross.png" />
-                        </div>
-
-
-                    </div>
-                </div>
-
-
-            </div>
-
-
-
-
+          </div>
         </div>
-
+      </div>
     </div>
+  </div>
 </div>
-
 
 <!-- conformation modal -->
 <div class="modal fade mintmodal" id="claimconfirm" tabindex="-1" role="dialog" aria-labelledby="exampleModaltwo"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header border-0">
-                <h3 class="modal-title mb-0">
-                    Are you sure you want to Claim ?
-                </h3>
-
-            </div>
-            <div class="modal-footer">
-
-
-                <button type="button" class="tab-button" data-dismiss="modal" aria-label="Close">
-                    Cancel
-                </button>
-                <button type="button" class="tab-button" (click)="clickMint()" data-dismiss="modal" aria-label="Close">
-                    Confirm
-                </button>
-            </div>
-        </div>
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-0">
+        <h3 class="modal-title mb-0">Are you sure you want to Claim ?</h3>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="tab-button" data-dismiss="modal" aria-label="Close">
+          Cancel
+        </button>
+        <button type="button" class="tab-button" (click)="clickMint()" data-dismiss="modal" aria-label="Close">
+          Confirm
+        </button>
+      </div>
     </div>
+  </div>
 </div>
