--- a/src/app/components/dashboard/referrals/referrals.component.html
+++ b/src/app/components/dashboard/referrals/referrals.component.html
@@ -17,7 +17,7 @@
           <span style="padding-left:10%">
             <h1 style="color: white" class="h1_span">
               Referral Amount :
-              {{personalReferralData?.referralAmount | number:'1.0-5'}} BNB
+              {{personalReferralData.referralAmount | number:'1.0-5'}} BNB
               <!-- {{accountNo}} -->
             </h1>
           </span>
@@ -36,7 +36,7 @@
                       matTooltipPosition="below"><i class="fas fa-question-circle" style="font-size: 16px;"></i></span> 
               
               :
-              {{personalReferralData?.referralTokens | number:'1.0-2'}} Grise
+              {{personalReferralData.referralTokens | number:'1.0-2'}} Grise
             </h1>
           </span>
         </div>
