--- a/src/app/components/dashboard/refund-history/refund-history.component.html
+++ b/src/app/components/dashboard/refund-history/refund-history.component.html
@@ -21,7 +21,7 @@
             <button class="ether">
               <img src="assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
             </button>
-            <span class="digit">{{ refundHistoryData?.sponsoredAmount | number:'1.0-5' }} BNB</span>
+            <span class="digit">{{ refundHistoryData.sponsoredAmount | number:'1.0-5' }} BNB</span>
           </span>
         </div>
       </div>
@@ -37,7 +37,7 @@
             <button class="ether">
               <img src="assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
             </button>
-            <span class="digit">{{ refundHistoryData?.myRefundAmount | number:'1.0-5' }} BNB</span>
+            <span class="digit">{{ refundHistoryData.myRefundAmount | number:'1.0-5' }} BNB</span>
           </span>
         </div>
         <h4 style=" margin: 30PX; text-transform:initial">
