--- a/src/app/components/tokenstats/staking/staking.component.html
+++ b/src/app/components/tokenstats/staking/staking.component.html
@@ -19,31 +19,31 @@
             <tbody style="text-align: left;">
               <tr>
                 <td>Total staked</td>
-                <td class="text-right px-1"> {{stakeCount?.totalStakeCount ? stakeCount?.totalStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.totalStakeCount ? stakeCount.totalStakeCount : '-' }} </td>
               </tr>
               <tr>
                 <td>Short-term stake</td>
-                <td class="text-right px-1"> {{stakeCount?.stStakeCount ? stakeCount?.stStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.stStakeCount ? stakeCount.stStakeCount : '-' }} </td>
               </tr>
               <tr>
                 <td>Medium-term stake</td>
-                <td class="text-right px-1">{{stakeCount?.mtStakeCount ? stakeCount?.mtStakeCount : '-' }}</td>
+                <td class="text-right px-1">{{stakeCount.mtStakeCount ? stakeCount.mtStakeCount : '-' }}</td>
               </tr>
               <tr>
                 <td class="px-5">3-Month</td>
-                <td class="text-right px-1"> {{stakeCount?.mt3MonthStakeCount ? stakeCount?.mt3MonthStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.mt3MonthStakeCount ? stakeCount.mt3MonthStakeCount : '-' }} </td>
               </tr>
               <tr>
                 <td class="px-5">6-Month</td>
-                <td class="text-right px-1"> {{stakeCount?.mt6MonthStakeCount ? stakeCount?.mt6MonthStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.mt6MonthStakeCount ? stakeCount.mt6MonthStakeCount : '-' }} </td>
               </tr>
               <tr>
                 <td class="px-5">9-Month</td>
-                <td class="text-right px-1"> {{stakeCount?.mt9MonthStakeCount ? stakeCount?.mt9MonthStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.mt9MonthStakeCount ? stakeCount.mt9MonthStakeCount : '-' }} </td>
               </tr>
               <tr>
                 <td>Long-term stake</td>
-                <td class="text-right px-1"> {{stakeCount?.ltStakeCount ? stakeCount?.ltStakeCount : '-' }} </td>
+                <td class="text-right px-1"> {{stakeCount.ltStakeCount ? stakeCount.ltStakeCount : '-' }} </td>
               </tr>
 
             </tbody>
@@ -72,27 +72,27 @@
 
               <tr>
                 <td>Short-term staking Slot</td>
-                <td class="text-right px-1"> {{slotLeft?.stSlotLeft ? slotLeft?.stSlotLeft : '-' }} </td>
+                <td class="text-right px-1"> {{slotLeft.stSlotLeft ? slotLeft.stSlotLeft : '-' }} </td>
               </tr>
               <tr>
                 <td>Medium-term staking Slot</td>
-                <td class="text-right px-1">{{slotLeft?.mtSlotLeft ? slotLeft?.mtSlotLeft : '-' }}</td>
+                <td class="text-right px-1">{{slotLeft.mtSlotLeft ? slotLeft.mtSlotLeft : '-' }}</td>
               </tr>
               <tr>
                 <td class="px-5">3-Month</td>
-                <td class="text-right px-1"> {{slotLeft?.mt3MonthSlotLeft ? slotLeft?.mt3MonthSlotLeft : '-' }} </td>
+                <td class="text-right px-1"> {{slotLeft.mt3MonthSlotLeft ? slotLeft.mt3MonthSlotLeft : '-' }} </td>
               </tr>
               <tr>
                 <td class="px-5">6-Month</td>
-                <td class="text-right px-1"> {{slotLeft?.mt6MonthSlotLeft ? slotLeft?.mt6MonthSlotLeft : '-' }} </td>
+                <td class="text-right px-1"> {{slotLeft.mt6MonthSlotLeft ? slotLeft.mt6MonthSlotLeft : '-' }} </td>
               </tr>
               <tr>
                 <td class="px-5">9-Month</td>
-                <td class="text-right px-1"> {{slotLeft?.mt9MonthSlotLeft ? slotLeft?.mt9MonthSlotLeft : '-' }} </td>
+                <td class="text-right px-1"> {{slotLeft.mt9MonthSlotLeft ? slotLeft.mt9MonthSlotLeft : '-' }} </td>
               </tr>
               <tr>
                 <td>Long-term staking Slots</td>
-                <td class="text-right px-1"> {{slotLeft?.ltSlotLeft ? slotLeft?.ltSlotLeft : '-' }} </td>
+                <td class="text-right px-1"> {{slotLeft.ltSlotLeft ? slotLeft.ltSlotLeft : '-' }} </td>
               </tr>
 
             </tbody>
