--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -339,6 +339,11 @@
         <!-- <div class="container"> -->
 
         <div class="col-md-12 col-md-offset-6 mx-auto">
+          <div class="d-xl-none d-lg-flex d-md-flex d-sm-flex w-100 justify-content-center mt-4">
+            <h2 class="pt-3 mint-live-blink text-center">Mint is live</h2>
+            <!-- <span class="d-flex align-items-center pt-3"> Minting Starts:</span> <app-count-down [mintDate]="launchDate"></app-count-down> -->
+           </div>
+
           <div class="d-flex flex-wrap w-100 justify-content-md-between justify-content-center">
 
             <div class="col-xl-5 col-md-12">
@@ -407,7 +412,12 @@
 
 
             </div>
-            <div class="col-xl-7 d-flex align-items-center">
+            <div class="col-xl-7 d-flex flex-wrap align-items-center">
+
+              <div class="d-xl-flex d-lg-none d-md-none d-sm-none w-100 justify-content-center">
+                <h2 class="pt-3 mint-live-blink text-center">Mint is coming soon</h2>
+               <!-- <span class="d-flex align-items-center pt-3"> Minting Starts:</span> <app-count-down [mintDate]="launchDate"></app-count-down> -->
+              </div>
 
               <div class="bg-dark-box d-flex flex-wrap w-100 justify-content-md-start p-2 p-md-5 rounded">
                 <div class="col-md-7 text-md-left">
