removed allowuser condition on ai pages also, call api's in onInit function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1046,7 +1046,7 @@
         </a> -->
       </div>
     </div>
-    <app-my-loader></app-my-loader>
+    <!-- <app-my-loader></app-my-loader> -->
     <div class="stroke2-width container-fluid router-outlet">
       <div class="child-components-container">
         <router-outlet></router-outlet>
