--- a/src/app/components/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/components/sentiment-analysis/sentiment-analysis.component.html
@@ -1,85 +1,93 @@
 <!-- <div *ngIf="allowed_user == true"> -->
 <!-- commented above div on 07-02-2023 as discussed with samad  -->
-  <div class="container bg-color ">
+<div class="container bg-color ">
 
-    <div class="row ">
-      <!-- introduction part -->
-      
-      <div class="col-lg-12 " style="margin-top: 59px;">
-  
-        <h1 class="headingAi_first">Introduction AI Platform</h1>
-        <div class="tab" style="text-align: justify;">
-  
-  
-  <div class="row">
+  <div class="row ">
+    <!-- introduction part -->
+
+    <div class="col-lg-12 " style="margin-top: 59px;">
+
+      <h1 class="headingAi_first">Introduction AI Platform</h1>
+      <div class="tab" style="text-align: justify;">
+
+
+        <div class="row">
           <div class="col-lg-12">
-           <h1> How to use Grise Token AI-Indices</h1>
+            <h1> How to use Grise Token AI-Indices</h1>
           </div>
           <div class="col-lg-12 my-3">
             <h4 class="text-danger">NOTE: Indices Rebalancing Times Are an Approximation.</h4>
           </div>
           <div class="col-lg-12 my-3">
             <div class="info-text">
-            Sometimes we may update the indices when we make important updates or changes to technical details and
-            calculations for an index. For example, we recently added a requirement for all indices to only hold
-            cryptocurrencies with a daily trading volume greater than $500k. Each of these technical updates requires us
-            to re-do the index. This will apply with future technical updates to indices.
-            Furthermore, we have recently add features related to trading signal. This features is based on Deep Learning by which our stacker can take smart decision to avoid loss in trading. In AI-Price prediction algorithms we can see the future expected price up-to two months and take fast decision to in-out the market.
-            As a result, the days and times are an approximation and indices may take 1-4 hours to fully update or on
-            occasion be rebalanced more than their time-horizon to make important technical updates.
+              Sometimes we may update the indices when we make important updates or changes to technical details and
+              calculations for an index. For example, we recently added a requirement for all indices to only hold
+              cryptocurrencies with a daily trading volume greater than $500k. Each of these technical updates requires
+              us
+              to re-do the index. This will apply with future technical updates to indices.
+              Furthermore, we have recently add features related to trading signal. This features is based on Deep
+              Learning by which our stacker can take smart decision to avoid loss in trading. In AI-Price prediction
+              algorithms we can see the future expected price up-to two months and take fast decision to in-out the
+              market.
+              As a result, the days and times are an approximation and indices may take 1-4 hours to fully update or on
+              occasion be rebalanced more than their time-horizon to make important technical updates.
+            </div>
           </div>
-        </div>
-        <div class="col-lg-12 my-3">
+          <div class="col-lg-12 my-3">
             <h4 class="text-danger">DISCLAIMER
-            Indices of crypto investments, like all types of investment-related information, are subject to risk; they can
-            go down as well as up; and relying on such information can lead to losses as well as gains. Information about
-            past performance is not necessarily indicative of future performance.
+              Indices of crypto investments, like all types of investment-related information, are subject to risk; they
+              can
+              go down as well as up; and relying on such information can lead to losses as well as gains. Information
+              about
+              past performance is not necessarily indicative of future performance.
             </h4>
-        </div>
           </div>
         </div>
       </div>
     </div>
-  
-    <h1 class="headingAi">Sentiment Analysis </h1>
-  
-    <div class="card-div">
-      <h4 class="text-danger">
+  </div>
+
+  <h1 class="headingAi">Sentiment Analysis </h1>
+
+  <div class="card-div">
+    <!-- <h4 class="text-danger">
         <span class="mr-3 text-danger">Last Updated Date/Time:</span>  {{last_change_date}}
-      </h4>
-      <h2 for="ice-cream-choice" class="mr-3">Choose Coin:</h2>
-      <input class="inputcoinsearch mb-3 " type="text" list="productList" name="product" [(ngModel)]='currentProduct'
-        (change)="onProductChanged(currentProduct)" />
-  
-      <datalist id="productList">
-        <option *ngFor="let data_coin_name of coins_list_api;" [value]="data_coin_name.id">
-          {{data_coin_name.id}} ({{data_coin_name.symbol}})
-        </option>
-      </datalist>
-      <canvas baseChart [colors]="PieChartColor" [data]="pieChartData"
-        [options]="pieChartOptions" [legend]="pieChartLegend" [labels]="pieChartLabels" [chartType]="pieChartType">
-      </canvas>
-      <!-- <highcharts-chart class="custom-chart-styles"
+      </h4> -->
+    <h2 for="ice-cream-choice" class="mr-3">Choose Coin:</h2>
+    
+    <input class="inputcoinsearch mb-3" type="text" list="productList" name="product" [(ngModel)]='currentProduct'
+      (change)="onProductChanged(currentProduct)" />
+
+    <datalist id="productList">
+      <option *ngFor="let data_coin_name of coins_list_api;" [value]="data_coin_name.id">
+        {{data_coin_name.id}} ({{data_coin_name.symbol}})
+      </option>
+    </datalist>
+    <canvas baseChart [colors]="PieChartColor" [data]="pieChartData" [options]="pieChartOptions"
+      [legend]="pieChartLegend" [labels]="pieChartLabels" [chartType]="pieChartType">
+    </canvas>
+    <!-- <highcharts-chart class="custom-chart-styles"
         [Highcharts]="highcharts"
         [options]="pieChart">
       </highcharts-chart> -->
-      <!-- <div id="container"></div> -->
-    </div>
-
+    <!-- <div id="container"></div> -->
   </div>
+
+</div>
 <!-- </div> -->
 
 <div *ngIf="allowed_user == false" class="d-none">
   <div style="font-size: 30px; margin-top: 21%; line-height: normal;" class="text-center mb-5">
     AI will only be available to NFT holders.
     <div>
-      <img class="sidebar-icon" src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/dashboard.png" alt="dashboard">
+      <img class="sidebar-icon" src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/dashboard.png"
+        alt="dashboard">
       <br>
       <!--<div class="d-flex justify-content-center access-btn-div">
         <span (click)="giveAccess()" class="access-btn">Access AI</span>
       </div>-->
     </div>
-  <!-- <div style="font-size: 30px; margin-top: 21%;" class="text-center mb-5">
+    <!-- <div style="font-size: 30px; margin-top: 21%;" class="text-center mb-5">
   Please hold grise NFT's to gain access
   <div>
     <a routerLinkActive="active" routerLink="/dashboard" queryParamsHandling="merge" onclick="closeNav()">
@@ -88,9 +96,9 @@
       <label class="mb-0 app-item-text">Dashboard</label>
     </a>
   </div> -->
-</div>
-    
-<!-- <div class="row">
+  </div>
+
+  <!-- <div class="row">
       graph index section
       <div class="col-lg-12">
        
