head egg image path fixed, spelling fix on coin corelation page

--- a/src/app/components/coin-details/coin-corelation/coin-corelation.component.html
+++ b/src/app/components/coin-details/coin-corelation/coin-corelation.component.html
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-6 card-outer-div">
-            <h1 class="headingAi">Coorelate Coin</h1>
+            <h1 class="headingAi">Correlate Coin</h1>
             <div class='main-div card-div'>
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-lg-6 coin-detail-div d-flex">
